--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
             <p>مدرسة رفيق الحريري الثانوية</p>
             <div style="margin-top: 1rem;">
                 <span id="user-email" style="color: #666; font-size: 0.9rem;"></span>
+                <button id="question-editor-btn" style="margin-right: 1rem; padding: 0.5rem 1rem; background: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">📝 محرر الأسئلة</button>
                 <button id="logout-btn" style="margin-right: 1rem; padding: 0.5rem 1rem; background: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">🚪 تسجيل الخروج</button>
             </div>
         </header>
@@ -48,6 +49,7 @@
                     <option value="hard">صعب</option>
                 </select>
             </label>
+            <button id="clear-responses-btn" class="export-btn" style="background: #dc3545;">🗑️ مسح الردود</button>
             <button id="export-btn" class="export-btn">📥 تصدير البيانات (CSV)</button>
         </div>
 
