--- a/question-editor.html
+++ b/question-editor.html
@@ -15,6 +15,7 @@
             <p>إدارة وتعديل أسئلة الاختبار</p>
             <div style="margin-top: 1rem;">
                 <span id="user-email" style="color: #666; font-size: 0.9rem;"></span>
+                <button id="admin-panel-btn" style="margin-right: 1rem; padding: 0.5rem 1rem; background: #667eea; color: white; border: none; border-radius: 5px; cursor: pointer;">📊 لوحة التحكم</button>
                 <button id="logout-btn" style="margin-right: 1rem; padding: 0.5rem 1rem; background: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">🚪 تسجيل الخروج</button>
             </div>
             <div class="header-actions">
