--- a/question-editor.html
+++ b/question-editor.html
@@ -26,43 +26,45 @@
             </div>
         </header>
 
-        <div class="stats-bar">
-            <div class="stat-item">
-                <span class="stat-label">إجمالي الأسئلة:</span>
-                <span class="stat-value" id="total-questions">0</span>
+        <main>
+            <div class="stats-bar">
+                <div class="stat-item">
+                    <span class="stat-label">إجمالي الأسئلة:</span>
+                    <span class="stat-value" id="total-questions">0</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">سهل:</span>
+                    <span class="stat-value easy" id="easy-count">0</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">متوسط:</span>
+                    <span class="stat-value medium" id="medium-count">0</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">صعب:</span>
+                    <span class="stat-value hard" id="hard-count">0</span>
+                </div>
             </div>
-            <div class="stat-item">
-                <span class="stat-label">سهل:</span>
-                <span class="stat-value easy" id="easy-count">0</span>
-            </div>
-            <div class="stat-item">
-                <span class="stat-label">متوسط:</span>
-                <span class="stat-value medium" id="medium-count">0</span>
-            </div>
-            <div class="stat-item">
-                <span class="stat-label">صعب:</span>
-                <span class="stat-value hard" id="hard-count">0</span>
-            </div>
-        </div>
 
-        <div class="filters-bar">
-            <div class="filter-group">
-                <label>تصفية حسب الصعوبة:</label>
-                <select id="filter-difficulty">
-                    <option value="all">الكل</option>
-                    <option value="easy">سهل</option>
-                    <option value="medium">متوسط</option>
-                    <option value="hard">صعب</option>
-                </select>
+            <div class="filters-bar">
+                <div class="filter-group">
+                    <label>تصفية حسب الصعوبة:</label>
+                    <select id="filter-difficulty">
+                        <option value="all">الكل</option>
+                        <option value="easy">سهل</option>
+                        <option value="medium">متوسط</option>
+                        <option value="hard">صعب</option>
+                    </select>
+                </div>
+                <div class="search-group">
+                    <input type="text" id="search-input" placeholder="🔍 ابحث في الأسئلة...">
+                </div>
             </div>
-            <div class="search-group">
-                <input type="text" id="search-input" placeholder="🔍 ابحث في الأسئلة...">
-            </div>
-        </div>
 
-        <div id="questions-container" class="questions-grid">
-            <!-- Questions will be loaded here dynamically -->
-        </div>
+            <div id="questions-container" class="questions-grid">
+                <!-- Questions will be loaded here dynamically -->
+            </div>
+        </main>
 
         <!-- Add/Edit Question Modal -->
         <div id="question-modal" class="modal">
