--- a/question-editor.html
+++ b/question-editor.html
@@ -21,9 +21,13 @@
             <div class="header-actions">
                 <button id="add-question-btn" class="btn-primary">➕ إضافة سؤال جديد</button>
                 <button id="import-initial-btn" class="btn-warning">📤 رفع الأسئلة الأولية</button>
+                <button id="upload-custom-btn" class="btn-info">📁 رفع ملف مخصص</button>
                 <button id="save-all-btn" class="btn-success">💾 حفظ جميع التغييرات</button>
                 <button id="export-json-btn" class="btn-secondary">📥 تصدير JSON</button>
             </div>
+            
+            <!-- File Upload Input (Hidden) -->
+            <input type="file" id="questions-file-input" accept=".js" style="display: none;">
         </header>
 
         <main>
