--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<main class="main-content">
     <!-- ============================================= -->
     <!--      شاشة 1: إدخال الاسم                  -->
     <!-- ============================================= -->
@@ -52,6 +53,7 @@
             <div id="progress-bar"></div>
         </div>
         <div class="quiz-header">
+            <img src="images/logo.png" alt="شعار المدرسة" class="school-logo">
             <h2 id="question-text">نص السؤال هنا...</h2>
         </div>
         <div class="quiz-body">
@@ -79,6 +81,7 @@
         </p>
         <button id="restart-btn" class="btn btn-secondary">إعادة الاختبار</button>
     </div>
+</main>
 
     <!-- ============================================= -->
     <!--      ملفات JavaScript                     -->
@@ -91,6 +94,23 @@
     <!-- 4. ملفات JavaScript الخاصة بالمشروع (يجب أن تكون بالترتيب الصحيح) -->
     <script src="js/firebase-config.js"></script>
     <script src="js/game.js"></script>
+
+    <!-- Footer Section -->
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-logos">
+                <img src="images/logo.png" alt="Logo 1" class="footer-logo">
+                <img src="images/logo2.png" alt="Logo 2" class="footer-logo">
+            </div>
+            <div class="footer-links">
+                <a href="about.html">عن المدرسة</a>
+            <a href="about.html"> فريق المطورين</a>
+            </div>
+            <div class="copyright">
+                &copy; 2025 جميع الحقوق محفوظة لثانوية رفيق الحريري.
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
