--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
         <header class="admin-header">
             <img src="images/logo.png" alt="شعار المدرسة" class="header-logo">
             <h1>📊 لوحة تحكم الإحصائيات</h1>
-            <p>مدرسة رفيق الحريري الثانوية</p>
+            <p>مدرسة ثانوية رفيق الحريري ؤاشىلث</p>
             <div style="margin-top: 1rem;">
                 <span id="user-email" style="color: #666; font-size: 0.9rem;"></span>
                 <button id="question-editor-btn" class="btn btn-success">📝 محرر الأسئلة</button>
@@ -86,23 +86,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics-compat.js"></script>
     
     <script src="js/firebase-config.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/admin.js"></script>
-
-    <!-- Footer Section -->
-    <footer class="site-footer">
-        <div class="footer-content">
-            <div class="footer-logos">
-                <img src="images/logo.png" alt="Logo 1" class="footer-logo">
-                <img src="images/logo2.png" alt="Logo 2" class="footer-logo">
-            </div>
-            <div class="footer-links">
-                <a href="about.html">عن المدرسة</a>
-            <a href="about.html"> فريق المطورين</a>
-            </div>
-            <div class="copyright">
-                &copy; 2025 جميع الحقوق محفوظة لثانوية رفيق الحريري.
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
