--- a/question-editor.html
+++ b/question-editor.html
@@ -154,23 +154,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-analytics-compat.js"></script>
     
     <script src="js/firebase-config.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/question-editor.js"></script>
-
-    <!-- Footer Section -->
-    <footer class="site-footer">
-        <div class="footer-content">
-            <div class="footer-logos">
-                <img src="images/logo.png" alt="Logo 1" class="footer-logo">
-                <img src="images/logo2.png" alt="Logo 2" class="footer-logo">
-            </div>
-            <div class="footer-links">
-                <a href="about.html">عن المدرسة</a>
-            <a href="about.html"> فريق المطورين</a>
-            </div>
-            <div class="copyright">
-                &copy; 2025 جميع الحقوق محفوظة لثانوية رفيق الحريري.
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
