--- a/about.html
+++ b/about.html
@@ -79,5 +79,7 @@
     </div>
 </footer>
 
+<!-- Vercel Analytics -->
+<script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </body>
 </html>
