--- a/admin.html
+++ b/admin.html
@@ -88,5 +88,8 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/admin.js"></script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </body>
 </html>
