--- a/login.html
+++ b/login.html
@@ -115,5 +115,8 @@
     </script>
 
     <script src="js/footer.js"></script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </body>
 </html>
