--- a/question-editor.html
+++ b/question-editor.html
@@ -156,5 +156,8 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/question-editor.js"></script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </body>
 </html>
