--- a/about.html
+++ b/about.html
@@ -79,7 +79,14 @@
     </div>
 </footer>
 
-<!-- Vercel Analytics -->
-<script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
+<!-- Vercel Analytics - only load when deployed -->
+<script>
+    if (window.location.protocol === 'https:' || window.location.hostname !== 'localhost') {
+        const script = document.createElement('script');
+        script.src = 'https://va.vercel-scripts.com/v1/script.js';
+        script.defer = true;
+        document.body.appendChild(script);
+    }
+</script>
 </body>
 </html>
