--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عن المدرسة: تاريخ ثانوية رفيق الحريري</title>
+    <title>عن مطورين البرنامج</title>
     
     <!-- ربط ملف التصميم CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -39,7 +39,7 @@
         <div class="quiz-header">
             <img src="images/logo.png" alt="شعار المدرسة" class="school-logo">
 			<img src="images/logo2.png" alt="شعار المدرسة" class="school-logo">
-            <h1>عن ثانوية رفيق الحريري</h1>
+            <h1>فريق العمل في تتطوير البرنامج</h1>
         </div>
         <div class="quiz-body">
             <div class="about-content">
