--- a/question-editor.html
+++ b/question-editor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محرر الأسئلة - RHHS Trivia</title>
+    <title>محرر الأسئلة - RHHS Foundation</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/logo.png" type="image/png">
 </head>
