--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <h2>أعضاء الفريق</h2>
                     <ul class="team-members">
                         <li><strong>مطور:</strong> براء الملاح – baraa.elmallah@rhhs.edu.lb</li>
-                        <li><strong>مطور:</strong> زيد نحولي – ziad.nahouli@rhhs.edu.lb</li>
+                        <li><strong>مطور:</strong> زياد نحولي – ziad.nahouli@rhhs.edu.lb</li>
                     </ul>
                 </div>
             </div>
