--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
                     <ul class="team-members">
                         <li><strong>مطور:</strong> براء الملاح – baraa.elmallah@rhhs.edu.lb</li>
                         <li><strong>مطور:</strong> زياد نحولي – ziad.nahouli@rhhs.edu.lb</li>
+
+<li><strong>مطور:</strong> محمد حشيشو – mohammad.hachicho@rhhs.edu.lb</li>
                     </ul>
                 </div>
             </div>
