--- a/about.html
+++ b/about.html
@@ -55,6 +55,8 @@
                         <li><strong>مطور:</strong> زياد نحولي – ziad.nahouli@rhhs.edu.lb</li>
 
 <li><strong>مطور:</strong> محمد حشيشو – mohammad.hachicho@rhhs.edu.lb</li>
+
+<li><strong>مطور:</strong> أحمد شعار – ahmad.shaar@rhhs.edu.lb</li>
                     </ul>
                 </div>
             </div>
