--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
 <li><strong>مطور:</strong> محمد حشيشو – mohammad.hachicho@rhhs.edu.lb</li>
 
-<li><strong>مطور:</strong> أحمد شعار – ahmad.shaar@rhhs.edu.lb</li>
+<li><strong>مطور:</strong> أحمد الشعار – ahmad.shaar@rhhs.edu.lb</li>
                     </ul>
                 </div>
             </div>
